--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Oleose App Landing Page | Bootstrap Theme</title>
+    <title>PyLadies São Carlos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="favicon.png">
@@ -62,19 +62,18 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#about">about</a>
+                            <li><a href="#about">pyladies</a>
                             </li>
-                            <li><a href="#features">features</a>
+                            <li><a href="#features">grupo são carlos</a>
                             </li>
-                            <li><a href="#reviews">reviews</a>
+                            <li><a href="#reviews">projetos</a>
                             </li>
-                            <li><a href="#screens">screens</a>
+                            <li><a href="#screens">eventos</a>
                             </li>
-                            <li><a href="#demo">demo</a>
+                            <li><a href="#demo">apoio</a>
                             </li>
-                            <li><a class="getApp" href="#getApp">get app</a>
                             </li>
-                            <li><a href="#support">support</a>
+                            <li><a href="#support">contato</a>
                             </li>
                         </ul>
                     </div>
@@ -102,7 +101,7 @@
                             data-speed="500"
                             data-start="700"
                             data-easing="Power4.easeOut">
-                            <img src="img/berry/Slides/hand-berry.png" alt="">
+                            <img src="img/berry/Slides/python2.png" alt="">
                         </div>
 
                         <div class="tp-caption lfl fadeout visible-xs"
@@ -117,21 +116,21 @@
                         </div>
 
                         <div class="tp-caption large_white_bold sft" data-x="550" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1200" data-easing="Power4.easeOut">
-                            Oleose
+                            We
                         </div>
                         <div class="tp-caption large_white_light sfr" data-x="770" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1400" data-easing="Power4.easeOut">
-                            App
+                            Are
                         </div>
                         <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
-                            Landing Theme
+                            pyLadies
                         </div>
 
                         <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
-                            <a href="#about" class="btn btn-primary inverse btn-lg">LEARN MORE</a>
+                            <a href="#about" class="btn btn-primary inverse btn-lg">Follow us</a>
                         </div>
-                        <div class="tp-caption sfr hidden-xs" data-x="730" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
+                        <!--<div class="tp-caption sfr hidden-xs" data-x="730" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
                             <a href="#getApp" class="btn btn-default btn-lg">GET APP</a>
-                        </div>
+                        </div>-->
 
                     </li>
                     <!-- SLIDE 2 -->
@@ -229,38 +228,33 @@
             <div class="container">
                 
                 <div class="section-heading scrollpoint sp-effect3">
-                    <h1>About Us</h1>
+                    <h1>O que é pyLadies?</h1>
                     <div class="divider"></div>
-                    <p>Oleose Beautiful App Landing Page</p>
+                    <p>
+                        O PyLadies é um grupo internacional com foco em ajudar mais mulheres a tornarem-se participantes ativas e líderes de comunidades Python de código aberto.
+                    </p>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-6">
+                    <div class="col-md-4 col-sm-4 col-xs-6">
                         <div class="about-item scrollpoint sp-effect2">
                             <i class="fa fa-download fa-2x"></i>
-                            <h3>Easy setup</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <h3>Origem</h3>
+                            <p>O primeiro grupo surgiu ...</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6" >
+                    <div class="col-md-4 col-sm-4 col-xs-6" >
                         <div class="about-item scrollpoint sp-effect5">
                             <i class="fa fa-mobile fa-2x"></i>
-                            <h3>On-the-go</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <h3>Missão</h3>
+                            <p>Nossa missão é promover, educar e impulsionar a existência de uma comunidade Python diversificada através de sensibilização, educação, conferências, eventos e encontros sociais.</p>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6" >
+                    <div class="col-md-4 col-sm-4 col-xs-6" >
                         <div class="about-item scrollpoint sp-effect5">
                             <i class="fa fa-users fa-2x"></i>
-                            <h3>Social connect</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-3 col-xs-6" >
-                        <div class="about-item scrollpoint sp-effect1">
-                            <i class="fa fa-sliders fa-2x"></i>
-                            <h3>Dedicated support</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                            <h3>Todos são bem vindos!</h3>
+                            <p>Nosso ideal não é segregar, mas sermos um meio de integrar as mulheres à programação.</p>
                         </div>
                     </div>
                 </div>
@@ -270,9 +264,18 @@
         <section id="features">
             <div class="container">
                 <div class="section-heading scrollpoint sp-effect3">
-                    <h1>Features</h1>
+                    <h1>PyLadies São Carlos</h1>
                     <div class="divider"></div>
-                    <p>Learn more about this feature packed App</p>
+                    <p>O PyLadies São Carlos foi o primeiro grupo a se formar no estado de São Paulo pois apesar de ser uma iniciativa bem conhecida em outros países, no Brasil ainda há poucos grupos.
+Temos integrantes da UFSCar (Universidade Federal de São Carlos) e da USP (Universidade de São Paulo - Campus São Carlos).</p><p>
+
+Nossos objetivos são:
+
+</p><p>Aprender Python juntas, realizando reuniões regulares e Coding Dojos;
+Organizar eventos, minicursos e workshops abertos às todos os públicos;
+Realizar projetos sociais nas escolas de São Carlos apresentando os cursos de Computação e incentivando as garotas à ingressarem na área das exatas;
+Participar de eventos da comunidade Python.
+</p>
                 </div>
                 <div class="row">
                     <div class="col-md-4 col-sm-4 scrollpoint sp-effect1">
@@ -532,15 +535,15 @@
         <section id="getApp">
             <div class="container-fluid">
                 <div class="section-heading inverse scrollpoint sp-effect3">
-                    <h1>Get App</h1>
+                    <h1>Apoio</h1>
                     <div class="divider"></div>
-                    <p>Choose your native platform and get started!</p>
+                    <p>Patrocinadores e outras empresas que acreditam no nosso grupo.</p>
                 </div>
                 
                 <div class="row">
                     <div class="col-md-12">
                         <div class="hanging-phone scrollpoint sp-effect2 hidden-xs">
-                            <img src="img/berry/berry-angled2.png" alt="">
+                            <img src="img/berry/Ufscar.png" class="img-responsive scrollpoint sp-effect5" data-x="300" data-y="center" alt="">
                         </div>
                         <div class="platforms">
                             <a href="#" class="btn btn-primary inverse scrollpoint sp-effect1">
@@ -567,9 +570,9 @@
         <section id="support" class="doublediagonal">
             <div class="container">
                 <div class="section-heading scrollpoint sp-effect3">
-                    <h1>Support</h1>
+                    <h1>Entre em contato!</h1>
                     <div class="divider"></div>
-                    <p>For more info and support, contact us!</p>
+                    <p>Quer participar? Tem alguma dúvida ou sugestão? Nos envie uma mensagem.</p>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
@@ -594,7 +597,7 @@
                                         <i class="fa fa-map-marker fa-2x"></i>
                                     </a>
                                     <div class="media-body">
-                                        <h4 class="media-heading">4, Some street, California, USA</h4>
+                                        <h4 class="media-heading">São Carlos - SP - Brasil</h4>
                                     </div>
                                 </div>
                                 <div class="media">
@@ -603,7 +606,7 @@
                                     </a>
                                     <div class="media-body">
                                         <h4 class="media-heading">
-                                            <a href="mailto:support@oleose.com">support@oleose.com</a>
+                                            <a href="mailto:support@oleose.com">saocarlos@pyladies.com</a>
                                         </h4>
                                     </div>
                                 </div>
@@ -630,11 +633,11 @@
                 <div class="social">
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
-                    <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a href="https://www.facebook.com/PyLadiesSaoCarlos" class="scrollpoint sp-effect3"><i class="fa fa-facebook fa-lg"></i></a>
                 </div>
                 <div class="rights">
-                    <p>Copyright &copy; 2014</p>
-                    <p>Template by <a href="http://www.scoopthemes.com" target="_blank">ScoopThemes</a></p>
+                    <p>Copyright &copy; 2015</p>
+                    <p>Todos os direitos reservados</a></p>
                 </div>
             </div>
         </footer>
