--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 </li>
                 <li><a href="#features">grupo são carlos</a>
                 </li>
-                <li><a href="#reviews">reviews</a>
-                </li>
+                <!--<li><a href="#reviews">reviews</a>
+                </li>-->
                 <li><a href="#screens">projetos & eventos</a>
                 </li>
-                <li><a href="#partners">apoio</a>
-                </li>
+                <!--<li><a href="#partners">apoio</a>
+                </li>-->
                 <li><a href="#support">contato</a>
                 </li>
               </ul>
@@ -151,8 +151,12 @@
 
 
             <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-              Nós <i class="fa fa-heart"> </i> programar!
+              Seja um líder e destaque-se no meio dos outros !
             </div>
+            <div class="tp-caption medium_light_white sfb hidden-xs" data-x="center" data-y="450" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
+                <p>O grupo é não é restrito para as mulheres, todos podem, e devem, participar (Ladies & Gentlemen).</p>
+                <p>Participe e aprenda a liderar, motivar e inspirar pessoas, principalmente mulheres, para as áreas de tecnologia.</p> 
+              </div>
 
 
           </li>
@@ -258,7 +262,7 @@
           <div class="col-md-4 col-sm-4 scrollpoint sp-effect1">
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/fabio.png"alt=""/>
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Ana Dulce</h3>
@@ -276,16 +280,16 @@
             </div>
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/fabio.png"alt=""/>
+                <img src="img/berry/members/bruna.png"alt=""/>
               </a>
               <div class="media-body">
-                <h3 class="media-heading">Beatriz</h3>
-                Estudante EComputação UFSCar
+                <h3 class="media-heading">Bruna</h3>
+                Estudante CComputação UFSCar
               </div>
             </div>
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/fabio.png"alt=""/>
+                <img src="img/berry/members/camila.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Camila</h3>
@@ -306,7 +310,7 @@
                 <img src="img/berry/members/fabio.png"alt=""/>
               </a>
               <div class="media-body">
-                <h3 class="media-heading">Fábio</h3>
+                <h3 class="media-heading">Fábio Schmidt</h3>
                 Estudante CComputação UNIP
               </div>
             </div>
@@ -315,26 +319,26 @@
                 <img src="img/berry/members/gabriela.png"alt=""/>
               </a>
               <div class="media-body">
-                <h3 class="media-heading">Gabriela</h3>
+                <h3 class="media-heading">Gabriela Mattos</h3>
                 Estudante CComputação UFSCar
               </div>
             </div>
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/fabio.png"alt=""/>
-              </a>
-              <div class="media-body">
-                <h3 class="media-heading">Jhuliani</h3>
-                Estudante EFísica UFSCar
-              </div>
-            </div>
-            <div class="media media-left feature">
-              <a class="pull-right" href="#">
-                <img src="img/berry/members/gabriela.png"alt=""/>
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Juliana</h3>
                 Estudante EComputação UFSCar
+              </div>
+            </div>
+            <div class="media media-left feature">
+              <a class="pull-right" href="#">
+                <img src="img/berry/members/jessica.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Jéssica</h3>
+                Estudante CComputação UFSCar
               </div>
             </div>
           </div>
@@ -342,28 +346,37 @@
             <img src="img/berry/3geek.png" class="img-responsive scrollpoint sp-effect5" alt="">
           </div>
           <div class="col-md-4 col-sm-4 scrollpoint sp-effect2">
-
-            <div class="media feature">
-              <a class="pull-left" href="#">
-                <img src="img/berry/members/gabriela.png"alt=""/>
-              </a>
-              <div class="media-body">
-                <h3 class="media-heading">Jéssica</h3>
-                Estudante CComputação UFSCar
-              </div>
-            </div>
             <div class="media feature">
               <a class="pull-left" href="#">
                 <img src="img/berry/members/leticia.png"alt=""/>
               </a>
               <div class="media-body">
-                <h3 class="media-heading">Letícia</h3>
+                <h3 class="media-heading">Letícia Rostirola</h3>
                 Bacharel CComputação USP
               </div>
             </div>
-            <div class="media active feature">
+
+            <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/leticiay.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Letícia Yumi</h3>
+                Estudante CComputação UFSCar
+              </div>
+            </div>
+            <div class="media feature">
+              <a class="pull-left" href="#">
+                <img src="img/berry/members/lucas.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Lucas</h3>
+                Estudante CComputação UFSCar
+              </div>
+            </div>
+            <div class="media feature">
+              <a class="pull-left" href="#">
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Mayara</h3>
@@ -372,7 +385,7 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Monique</h3>
@@ -381,7 +394,7 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/rafaela.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Rafaela</h3>
@@ -390,16 +403,16 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/rebeca.png"alt=""/>
               </a>
               <div class="media-body">
-                <h3 class="media-heading">Rebeca</h3>
+                <h3 class="media-heading">Rebeca Rocha</h3>
                 Estudante CComputação UFSCar
               </div>
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Samara</h3>
@@ -408,7 +421,7 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/caroline.png"alt=""/>
+                <img src="img/berry/members/nobody.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Stephanie</h3>
@@ -419,7 +432,7 @@
         </div>
       </div>
     </section>
-
+<!--
     <section id="reviews">
       <div class="container">
         <div class="section-heading inverse scrollpoint sp-effect3">
@@ -477,7 +490,7 @@
                     </div>
                   </div>
                 </div>
-                    </div><!--
+                    </div>
                     <div class="review rollitin">
                         <div class="row">
                             <div class="col-md-2">
@@ -543,7 +556,7 @@
           </div>-->
         </div>
       </section>
-
+<!--
       <section id="partners">
         <div class="container-fluid">
           <div class="section-heading inverse scrollpoint sp-effect3">
@@ -555,7 +568,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="hanging-phone scrollpoint sp-effect2 hidden-xs">
-                <img src="img/berry/UFSCar.png" class="img-responsive scrollpoint sp-effect5" data-x="300" data-y="center" alt="">
+                <img src="img/berry/ufscar.png" class="img-responsive scrollpoint sp-effect5" data-x="300" data-y="center" alt="">
               </div>
               <div class="platforms">
               </div>
@@ -567,7 +580,7 @@
 
         </div>
       </section>
-
+-->
       <section id="support" class="doublediagonal">
         <div class="container">
           <div class="section-heading scrollpoint sp-effect3">
