--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         <!--RevSlider-->
         <div class="tp-banner-container">
           <div class="tp-banner">
+            
             <ul>
               <!-- SLIDE  -->
               <li data-transition="fade" data-slotamount="7" data-masterspeed="1500" >
@@ -124,6 +125,9 @@
               </div>
               <div class="tp-caption large_white_light sfr" data-x="770" data-y="center" data-hoffset="0" data-voffset="-80" data-speed="500" data-start="1400" data-easing="Power4.easeOut">
                 Por que?
+              </div>
+              <div class="tp-caption medium_light_white sfb sfb visible-xs" data-x="center" data-y="center" data-hoffset="0" data-voffset="80" data-speed="1000" data-start="1600" data-easing="Power4.easeOut">
+                <p>"Python é uma linguagem muito versátil, usada não só <br>no desenvolvimento Web mas em muitos outros tipos de aplicação."<br>- python Brasil</p> 
               </div>
               <div class="tp-caption small_light_white sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="80" data-speed="1000" data-start="1600" data-easing="Power4.easeOut">
                 <p>"Python é uma linguagem muito versátil, usada não só <br>no desenvolvimento Web mas em muitos outros tipos de aplicação."<br>- python Brasil</p> 
@@ -151,14 +155,11 @@
 
 
             <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-              Seja um líder e destaque-se no meio dos outros !
+              Seja um líder!
             </div>
-            <div class="tp-caption medium_light_white sfb hidden-xs" data-x="center" data-y="450" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-                <p>O grupo é não é restrito para as mulheres, todos podem, e devem, participar (Ladies & Gentlemen).</p>
-                <p>Participe e aprenda a liderar, motivar e inspirar pessoas, principalmente mulheres, para as áreas de tecnologia.</p> 
+            <div class="tp-caption medium_light_white sfb" data-x="center" data-y="350" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
+                <p>Junte-se a nós.</p> 
               </div>
-
-
           </li>
 
           <!-- SLIDE 3 -->
@@ -178,10 +179,16 @@
             data-start="700"
             data-easing="Power4.easeOut">
             <img src="img/berry/Slides/face2.png" alt="">
+          </div><!-- visible é o q vai aparecer no mobile-->
+          <div class="tp-caption large_white_light sft visible-xs" data-x="center" data-y="center" data-hoffset="0" data-voffset="-170" data-speed="1000" data-start="1000" data-easing="Power4.easeOut">
+            Visite nossa página!
           </div>
-
-          <div class="tp-caption lfb visible-xs" data-x="center" data-y="center" data-hoffset="0" data-voffset="400" data-speed="1000" data-start="1200" data-easing="Power4.easeOut">
-            <a href="#" class="btn btn-primary inverse btn-lg">Visitar página</a>
+          <div class="tp-caption mediumlarge_light_white sfl visible-xs" data-x="center" data-y="center" data-hoffset="0" data-voffset="-50" data-speed="1000" data-start="1000" data-easing="Power4.easeOut">
+            Todos os eventos, cursos e demais atividades do PyLadies são publicadas <br>na nossa página do facebook. Curta nossa página e fique
+             por dentro das <br>novidades do grupo :)
+          </div>
+          <div class="tp-caption lfb visible-xs" data-x="center" data-y="center" data-hoffset="0" data-voffset="160" data-speed="1000" data-start="1200" data-easing="Power4.easeOut">
+            <a href="https://www.facebook.com/PyLadiesSaoCarlos" class="btn btn-primary inverse btn-lg">Aqui</a>
           </div>
 
 
@@ -198,13 +205,12 @@
           </div>
         </li>
             </ul>
+          
     </div>
-  </div>
+</div>
 </header>
 
 <div class="wrapper">
-
-
 
   <section id="about">
     <div class="container">
@@ -220,21 +226,21 @@
       <div class="row">
         <div class="col-md-4 col-sm-4 col-xs-6">
           <div class="about-item scrollpoint sp-effect2">
-            <i class="fa fa-download fa-2x"></i>
+            <i class="fa fa-users fa-2x"></i>
             <h3>Origem</h3>
-            <p>O primeiro grupo surgiu ...</p>
+            <p>O primeiro grupo foi criado nos Estados Unidos visando motivar mais mulheres a se interessarem por computação, utilizando como base a linguagem python.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-6" >
           <div class="about-item scrollpoint sp-effect5">
-            <i class="fa fa-mobile fa-2x"></i>
+            <i class="fa fa-space-shuttle fa-2x"></i>
             <h3>Missão</h3>
             <p>Nossa missão é promover, educar e impulsionar a existência de uma comunidade Python diversificada através de sensibilização, educação, conferências, eventos e encontros sociais.</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-4 col-xs-6" >
           <div class="about-item scrollpoint sp-effect5">
-            <i class="fa fa-users fa-2x"></i>
+            <i class="fa fa-thumbs-up fa-2x"></i>
             <h3>Todos são bem vindos!</h3>
             <p>Nosso ideal não é segregar, mas sermos um meio de integrar as mulheres à programação.</p>
           </div>
@@ -262,7 +268,7 @@
           <div class="col-md-4 col-sm-4 scrollpoint sp-effect1">
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
+                <img src="img/berry/members/ana.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Ana Dulce</h3>
@@ -276,6 +282,15 @@
               <div class="media-body">
                 <h3 class="media-heading">Bárbara</h3>
                 Estudante EComputação UFSCar
+              </div>
+            </div>
+            <div class="media media-left feature">
+              <a class="pull-right" href="#">
+                <img src="img/berry/members/bia.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Bia Lima</h3>
+                Estudante CComputação UFSCar
               </div>
             </div>
             <div class="media media-left feature">
@@ -325,20 +340,11 @@
             </div>
             <div class="media media-left feature">
               <a class="pull-right" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
+                <img src="img/berry/members/juliana.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Juliana</h3>
                 Estudante EComputação UFSCar
-              </div>
-            </div>
-            <div class="media media-left feature">
-              <a class="pull-right" href="#">
-                <img src="img/berry/members/jessica.png"alt=""/>
-              </a>
-              <div class="media-body">
-                <h3 class="media-heading">Jéssica</h3>
-                Estudante CComputação UFSCar
               </div>
             </div>
           </div>
@@ -346,6 +352,24 @@
             <img src="img/berry/3geek.png" class="img-responsive scrollpoint sp-effect5" alt="">
           </div>
           <div class="col-md-4 col-sm-4 scrollpoint sp-effect2">
+            <div class="media media">
+              <a class="pull-left" href="#">
+                <img src="img/berry/members/jessica.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Jéssica Caroline</h3>
+                Estudante CComputação UFSCar
+              </div>
+            </div>
+            <div class="media feature">
+              <a class="pull-left" href="#">
+                <img src="img/berry/members/jessicaa.png"alt=""/>
+              </a>
+              <div class="media-body">
+                <h3 class="media-heading">Jéssica Antunes</h3>
+                Estudante CComputação UFSCar
+              </div>
+            </div>
             <div class="media feature">
               <a class="pull-left" href="#">
                 <img src="img/berry/members/leticia.png"alt=""/>
@@ -355,7 +379,6 @@
                 Bacharel CComputação USP
               </div>
             </div>
-
             <div class="media feature">
               <a class="pull-left" href="#">
                 <img src="img/berry/members/leticiay.png"alt=""/>
@@ -376,19 +399,10 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
+                <img src="img/berry/members/mayara.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Mayara</h3>
-                Estudante CComputação UFSCar
-              </div>
-            </div>
-            <div class="media feature">
-              <a class="pull-left" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
-              </a>
-              <div class="media-body">
-                <h3 class="media-heading">Monique</h3>
                 Estudante CComputação UFSCar
               </div>
             </div>
@@ -412,19 +426,10 @@
             </div>
             <div class="media feature">
               <a class="pull-left" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
+                <img src="img/berry/members/samara.png"alt=""/>
               </a>
               <div class="media-body">
                 <h3 class="media-heading">Samara</h3>
-                Estudante CComputação UFSCar
-              </div>
-            </div>
-            <div class="media feature">
-              <a class="pull-left" href="#">
-                <img src="img/berry/members/nobody.png"alt=""/>
-              </a>
-              <div class="media-body">
-                <h3 class="media-heading">Stephanie</h3>
                 Estudante CComputação UFSCar
               </div>
             </div>
@@ -639,9 +644,10 @@
                     <img src="img/berry/logo.png" alt="" class="logo">
                   </a>
                   <div class="social">
-                    <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
-                    <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
+                    <a href="https://twitter.com/pyladiessanca" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
+                    <!--<a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>-->
                     <a href="https://www.facebook.com/PyLadiesSaoCarlos" class="scrollpoint sp-effect3"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a href="https://github.com/pyladies-sanca" class="scrollpoint sp-effect3"><i class="fa fa-github fa-lg"></i></a>
                   </div>
                   <div class="rights">
                     <p>Copyright &copy; 2015</p>
